--- a/TTL/lite/test/pages/index/index.wxml
+++ b/TTL/lite/test/pages/index/index.wxml
@@ -1,11 +1,15 @@
-<!--index.wxml-->
-<button bindtap='houduanButton1'>点击发起请求</button>
-<view wx:for="{{list}}">
-    id：{{item.userId}}--姓名：{{item.userName}}--昵称：{{item.nickName}}
+  <input type="text" class="houduanTab_input" placeholder="请输入产品编号" bindinput='pId_input'></input>
+  -----------------------
+    <input type="text" class="houduanTab_input" placeholder="请输入产品型号" bindinput='skuId_input'></input>
+  <button bindtap='houduanButton1'>查询</button>
+  <view wx:if="{{isAdd =='1'}}">
+    商品是否可以加入购物车：
+    <view class="isAddYes">是</view>
   </view>
------------------------
-  <input type="text" class="houduanTab_input" placeholder="请输入你要查询的内容" bindinput='houduanTab_input'></input>
-  <button bindtap='houduanButton2'>查询</button>
-  <view wx:if="{{message!=''}}">
-    {{message}}
+  <view wx:elif="{{isAdd=='0'}}">
+    商品是否可以加入购物车：
+    <view class="isAddNo">否</view>
+  </view>
+  <view wx:else>
+    查询结果
   </view>
